# herald

./: .dockerignore  .gitignore  AGENTS.md  package-lock.json  package.json
.github/: DEPLOYMENT.md
api/: Cargo.toml  Dockerfile
api/migrations/00000000000000_initial/: down.sql  up.sql
api/src/: auth.rs  blob_store.rs  config.rs  error.rs  ids.rs  mail.rs  mail_parser.rs  main.rs  schema.rs  state.rs  worker_client.rs
api/src/auth/: kratos.rs
api/src/models/: attachment.rs  mailbox.rs  message.rs  message_recipient.rs  mod.rs  raw_inbound_mail.rs  sync_event.rs  user.rs
api/src/routes/: health.rs  internal.rs  mailboxes.rs  me.rs  messages.rs  mod.rs
crates/api/: .env.example  Cargo.toml  Dockerfile
crates/api/migrations/: 001_raw_inbound_mails.sql  002_users_and_mailboxes.sql  003_mail_sync.sql
crates/api/migrations/202606160001_raw_inbound_mails/: down.sql  up.sql
crates/api/migrations/202606180001_multi_address_mailboxes/: down.sql  up.sql
crates/api/migrations/202606180002_realtime_messenger/: down.sql  up.sql
crates/api/migrations/202606180003_backfill_user_profile_columns/: down.sql  up.sql
crates/api/migrations/202606190001_email_senders/: down.sql  up.sql
crates/api/migrations/202606230001_contacts/: up.sql
crates/api/migrations/202606240001_drops/: down.sql  up.sql
crates/api/src/: addresses.rs  auth.rs  config.rs  db.rs  error.rs  ids.rs  mail.rs  mailboxes.rs  main.rs  realtime.rs  schema.rs  state.rs  worker_client.rs
crates/api/src/email/: mod.rs  registry.rs  resend.rs  ses.rs
crates/api/src/models/: address.rs  chat_message.rs  conversation.rs  conversation_participant.rs  drop.rs  email_sender.rs  mailbox.rs  message.rs  message_mailbox.rs  mod.rs  raw_inbound_mail.rs  user.rs  user_address.rs
crates/api/src/routes/: chat.rs  contacts.rs  drops.rs  email_senders.rs  mod.rs  objects.rs  sync.rs
designsystem/: README.md  SKILL.md  colors_and_type.css
docs/: explore-177099876247.md
infra/: compose.yml
migrations/: 001_init.sql  (+3 more)
(+108 files in other folders)
