[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum             = { version = "0.8", features = ["macros"] }
tokio            = { version = "1",   features = ["full"] }
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
diesel           = { version = "2",   features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async     = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = "2"
bb8              = "0.8"
uuid             = { version = "1",   features = ["v4", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }
reqwest          = { version = "0.12", features = ["json", "cookies"] }
tower-http       = { version = "0.5", features = ["cors", "trace"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy          = "0.15"
thiserror        = "1"
