[package]
name = "herald-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "herald-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "serde_json"] }
uuid = { version = "1", features = ["serde"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = "2"
bb8 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
thiserror = "1"
bytes = "1"
hex = "0.4"
mailparse = "0.15"
sha2 = "0.10"
base64 = "0.22"
